[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
# I prefer to disable incremental debug builds because they take too much disk space and are irrelevant in this project
incremental = false

[profile.release]
opt-level = "s"

[[bin]]
name = "2022_01"
path = "year_2022/day_01.rs"

[[bin]]
name = "2023_01"
path = "year_2023/day_01.rs" 

[[bin]]
name = "2023_09"
path = "year_2023/day_09.rs" 

[[bin]]
name = "2023_17"
path = "year_2023/day_17.rs" 

[[bin]]
name = "2023_18"
path = "year_2023/day_18.rs" 

