(executable
 (name day_09)
 (public_name day_09)
 (modules day_09)
 (libraries utils))

(executable
 (name day_14)
 (public_name day_14)
 (modules day_14)
 (libraries utils))

(executable
 (name day_15)
 (public_name day_15)
 (modules day_15)
 (libraries utils))

(executable
 (name day_16)
 (public_name day_16)
 (modules day_16)
 (libraries utils))
